<resources>
    <string name="app_name">Volleyball Scoreboard</string>
    <string name="defaultTeamNameOnLeft">Oranges</string>
    <string name="defaultTeamNameOnRight">Blues</string>
    <string name="wonMatch">%1$s won the match! Congratulations! </string>
    <string name="wonSet">%1$s won the set!</string>
    <string name="serve">%1$s will serve the ball.</string>
    <string name="tieBreaker">Tie breaker!</string>
    <string name="reset">reset</string>
    <string name="error">Oops! Sorry, that was an error.</string>
    <string name="zero">0</string>
    <string name="s1">S1</string>
    <string name="s2">S2</string>
    <string name="s3">S3</string>
    <string name="s4">S4</string>
    <string name="s5">S5</string>
    <string name="ex">EX</string>
    <string name="enter_team_name_1">Enter team name 1</string>
    <string name="enter_team_name_2">Enter team name 2</string>
    <string name="which_team_will_start_the_game">Which team will start the game?</string>
    <string name="oranges">Oranges</string>
    <string name="blues">Blues</string>
    <string name="flip_a_coin">Flip a coin</string>
    <string name="start_the_game">Start the game</string>
    <string name="cd_a_coin">A coin</string>
    <string name="tire">-</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="settings">SETTINGS</string>
    <string name="reset_warning">Are you sure you want to reset all the scores to 0? If you want to change the settings as well, click settings to go first to the settings page.</string>
    <string name="exchange_only_between_sets">You can exchange sides only between the sets.</string>
    <string name="all_timeoffs_used">The team has used all their time-offs.</string>
    <string name="used_timeoffs">The team has used %1$d time-offs. They have %2$d time-off left.</string>
    <string name="number_of_sets_to_play">Number of sets to play:</string>
    <string name="sets_will_finish_at_the_score">Sets will finish at the score:</string>
    <string name="tie_breaker_set_will_end_at">Tie breaker set will end at:</string>

    <string-array name="numberOfSets">
        <item>5</item>
        <item>3</item>
    </string-array>

    <string-array name="setFinishingScore">
        <item>25</item>
        <item>15</item>
    </string-array>

    <string-array name="tieBreakerScore">
        <item>15</item>
        <item>25</item>
    </string-array>

</resources>
