<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:id="@+id/teamNames"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/team_on_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif_medium"
            android:gravity="center"
            android:text="@string/initialTeamNameOnLeft"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/cellborder"
            android:padding="8dp"/>

        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="8dp"
            android:onClick="exchangeSides"
            android:text = "EX"
            android:background="@drawable/exchange"/>

        <TextView
            android:id="@+id/team_on_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif_medium"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/initialTeamNameOnRight"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/blueborder"/>

    </LinearLayout>

    <LinearLayout
        android:id = "@+id/scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:layout_below="@id/teamNames">

        <Button
            android:id="@+id/team_left_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="sans-serif_light"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="100sp"
            android:onClick="add1pointToTeamOnLeft"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/setsForTeamOnLeft"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif_medium"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:background="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/background_teamA" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/setsForTeamOnRight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif_medium"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:background="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/background_teamB" />

        </LinearLayout>

        <Button
            android:id="@+id/team_right_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="sans-serif_light"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="#000000"
            android:textSize="100sp"
            android:onClick="add1pointToTeamOnRight"
            android:background="@android:color/white"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreboard"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="65dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = ""
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/s1"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/s2"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/s3"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/s4"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/s5"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="5dp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_teamA">
            <TextView
                android:id="@+id/TeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/initialTeamNameOnLeft"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:padding="5dp" />
            <TextView
                android:id="@+id/s1_tA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/zero"
                android:padding="5dp" />
            <TextView
                android:id="@+id/s2_tA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/zero"
                android:padding="5dp" />
            <TextView
                android:id="@+id/s3_tA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/zero"
                android:padding="5dp" />
            <TextView
                android:id="@+id/s4_tA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/zero"
                android:padding="5dp" />
            <TextView
                android:id="@+id/s5_tA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/zero"
                android:padding="5dp" />
        </TableRow>

        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_dark" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_teamB">
            <TextView
                android:id="@+id/TeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/initialTeamNameOnRight"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/s1_tB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/zero"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/s2_tB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/zero"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/s3_tB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "0"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/s4_tB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/zero"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/s5_tB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/zero"
                android:padding="5dp"/>
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark" />
    </TableLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = ""
        android:textSize= "24dp"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:layout_above="@+id/reset"/>

    <Button
        android:id="@+id/undoLeft"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="20dp"
        android:onClick="correctionLeft"
        android:text="-"
        android:background="@drawable/buttonborders"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:background="@drawable/buttonborders"/>

    <Button
        android:id="@+id/undoRight"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="20dp"
        android:onClick="correctionRight"
        android:text="-"
        android:background="@drawable/buttonborders"/>

</RelativeLayout>